tests/ui/rustdoc/renamed-features-rustdoc_internals.rs
#![feature(doc_keyword)] //~ ERROR
#![feature(doc_primitive)] //~ ERROR
#![crate_type = "lib"]

pub fn foo() {}
